--- a/scattering.ipynb
+++ b/scattering.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "calculate n_c and shattered cells\n"
+    "### calculate n_c and shattered cells\n"
    ]
   },
   {
@@ -288,66 +288,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "895696"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(shattered)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "829568"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(shattered[(f_v >=0) & (f_v <= 1)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "245704"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(shattered[l <= shattered['bin_size']])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 112,
    "metadata": {},
    "outputs": [],
@@ -364,37 +304,6 @@
    "source": [
     "shattered_2 = shattered[shattered_mask_2]\n",
     "not_shattered_2 = shattered[not_shattered_mask_2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81893      0.017348\n",
-       "81895      0.007952\n",
-       "81908      0.027350\n",
-       "81933      0.003229\n",
-       "81952      0.009980\n",
-       "             ...   \n",
-       "7885435    0.011302\n",
-       "7885647    0.027702\n",
-       "7885924    0.037519\n",
-       "7886003    0.077806\n",
-       "7886050    0.021986\n",
-       "Name: filling_frac, Length: 245672, dtype: float64"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shattered_2['filling_frac']"
    ]
   },
   {
