changes to plotting and ray-tracing

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -313,64 +313,115 @@
     "import h5py\n",
     "import numpy as np\n",
     "import os\n",
-    "from astropy import units as u"
+    "from astropy import units as u\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fh = h5py.File('/ceph/submit/data/user/z/zimi/analysis/FIRE/m12b_res7100/output/snapshot_600.0.hdf5', 'r')\n",
+    "fh = h5py.File('/ceph/submit/data/user/z/zimi/analysis/FIRE/m12z_res4200/output/snapshot_600.1.hdf5', 'r')\n",
     "gas = fh[\"PartType0\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# in utilities.simulation.Snapshot():\n",
-      "* reading:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/snapshot_times.txt\n",
-      "\n",
-      "* input redshift = 0:  using snapshot index = 600, redshift = 0.000\n",
-      "\n",
-      "\n",
-      "# in halo_analysis.halo_io.IO():\n",
-      "* read 59085 halos from:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/halo/rockstar_dm/catalog_hdf5/halo_600.hdf5\n",
-      "\n",
-      "# in halo_analysis.halo_io.Particle():\n",
-      "! cannot find halo file:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/halo/rockstar_dm/catalog_hdf5/gas_600\n",
-      "* assigning primary host and coordinates wrt it to halo catalog...  finished\n",
-      "\n",
-      "\n",
-      "# in utilities.simulation.Snapshot():\n",
-      "* reading:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/snapshot_times.txt\n",
-      "\n",
-      "* input redshift = 0:  using snapshot index = 600, redshift = 0.000\n",
-      "\n",
-      "\n",
-      "# in gizmo_analysis.gizmo_io.Read():\n",
-      "* reading header from:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/output/snapshot_600.0.hdf5\n",
-      "  snapshot contains the following number of particles:\n",
-      "    dark      (id = 1): 96239056 particles\n",
-      "    dark2     (id = 2): 7591203 particles\n",
-      "    gas       (id = 0): 80307825 particles\n",
-      "    star      (id = 4): 16066489 particles\n",
-      "    blackhole (id = 5): 0 particles\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "host = halo.io.IO.read_catalogs('redshift', 0,'/ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100', species='gas')\n",
     "header = gizmo.io.Read.read_header('/ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float32(21.152422)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "host['scale.radius'][53425]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float32(1273874600000.0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "host['mass.vir'][53425]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float32(1076096800000.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "host['mass.200c'][53425]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prop = ['position', 'mass']\n",
+    "part = gizmo.io.Read.read_snapshots(['gas'], 'redshift', 0, '/ceph/submit/data/user/z/zimi/analysis/FIRE/m12z_res4200', properties = 'all', assign_hosts_rotation=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot2d(x, y, value, cmap = 'viridis', bins = 150, norm = None, vmin = None, vmax = None):\n",
+    "    mean, xbins, ybins, binnumber = stats.binned_statistic_2d(x, y, value, bins = bins)\n",
+    "\n",
+    "    # with np.errstate(divide='ignore', invalid='ignore'):  # suppress possible divide-by-zero warnings\n",
+    "    plot = plt.pcolormesh(ybins, xbins, mean, cmap = cmap, norm = norm, vmin = vmin, vmax = vmax)\n",
+    "\n",
+    "    return plot"
    ]
   },
   {
@@ -379,111 +430,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([38711.78, 47665.06, 46817.31], dtype=float32)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "host['rotation'][53425]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# in utilities.simulation.Snapshot():\n",
-      "* reading:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12b_res7100/snapshot_times.txt\n",
-      "\n",
-      "* input redshift = 0:  using snapshot index = 600, redshift = 0.000\n",
-      "\n",
-      "\n",
-      "# in gizmo_analysis.gizmo_io.Read():\n",
-      "* reading header from:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12b_res7100/output/snapshot_600.0.hdf5\n",
-      "  snapshot contains the following number of particles:\n",
-      "    dark      (id = 1): 74537000 particles\n",
-      "    dark2     (id = 2): 6750970 particles\n",
-      "    gas       (id = 0): 58588459 particles\n",
-      "    star      (id = 4): 16869462 particles\n",
-      "    blackhole (id = 5): 0 particles\n",
-      "\n",
-      "* reading the following\n",
-      "  species: ['gas']\n",
-      "  gas properties: ['mass', 'position']\n",
-      "\n",
-      "* reading particles from:\n",
-      "    snapshot_600.0.hdf5\n",
-      "    snapshot_600.1.hdf5\n",
-      "    snapshot_600.2.hdf5\n",
-      "    snapshot_600.3.hdf5\n",
-      "    snapshot_600.4.hdf5\n",
-      "    snapshot_600.5.hdf5\n",
-      "    snapshot_600.6.hdf5\n",
-      "    snapshot_600.7.hdf5\n",
-      "\n",
-      "* reading cosmological parameters from:  ceph/submit/data/user/z/zimi/analysis/FIRE/m12b_res7100/initial_condition/ic_agora_m12b.conf\n",
-      "\n",
-      "* checking sanity of particle properties\n",
-      "\n",
-      "  cannot read file containing hosts coordinates\n",
-      "  instead will assign hosts via iterative zoom on particle mass\n",
-      "\n",
-      "# in utilities.particle.get_center_positions():\n",
-      "* assigning position for 1 center/host, via iterative zoom-in on gas particle mass\n",
-      "  host1 position = (39257.39, 41609.99, 39190.06) [kpc comoving]\n",
-      "\n",
-      "\n",
-      "# in utilities.particle.get_principal_axes():\n",
-      "* assigning rotation tensor for 1 host\n",
-      "  using gas particles at distance < 10.0 kpc\n",
-      "  using distance < 9.3 kpc that encloses 90% of mass\n",
-      "! warning: no center velocities input to get_principal_axes()\n",
-      "  so direction/sign of minor axis rotation is ambiguous\n",
-      "  host1: axis ratios: min/maj = 0.138, min/med = 0.157, med/maj = 0.878\n",
-      "\n"
+     "ename": "KeyError",
+     "evalue": "'dist_z'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m binsize_plot = plot2d(\u001b[43mhalo_gas\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdist_z\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m, halo_gas[\u001b[33m'\u001b[39m\u001b[33mdist_y\u001b[39m\u001b[33m'\u001b[39m], value = halo_gas[\u001b[33m'\u001b[39m\u001b[33msmoothing_len\u001b[39m\u001b[33m'\u001b[39m], cmap = \u001b[33m'\u001b[39m\u001b[33mviridis_r\u001b[39m\u001b[33m'\u001b[39m, bins = [\u001b[32m700\u001b[39m,\u001b[32m700\u001b[39m])\n\u001b[32m      2\u001b[39m plt.axis(\u001b[33m'\u001b[39m\u001b[33mequal\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'dist_z'"
      ]
     }
    ],
    "source": [
-    "prop = ['position', 'mass']\n",
-    "part = gizmo.io.Read.read_snapshots(['gas'], 'redshift', 0, '/ceph/submit/data/user/z/zimi/analysis/FIRE/m12b_res7100', properties = prop, assign_hosts_rotation=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'position': array([[39257.39045089, 41609.99354669, 39190.05643334]]),\n",
-       " 'velocity': [],\n",
-       " 'acceleration': [],\n",
-       " 'rotation': array([[[ 0.57996381, -0.81105026, -0.07641635],\n",
-       "         [ 0.72333475,  0.55583914, -0.40967022],\n",
-       "         [ 0.37473834,  0.1823193 ,  0.90902742]]]),\n",
-       " 'axis.ratios': array([[0.13753059, 0.15669618, 0.87768946]])}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "part.host"
+    "binsize_plot = plot2d(halo_gas['position'][:,2], halo_gas['dist_y'], value = halo_gas['smoothing_len'], cmap = 'viridis_r', bins = [700,700])\n",
+    "plt.axis('equal')"
    ]
   },
   {
@@ -577,10 +537,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.0945355e-23  2.1593557e-23  2.1488839e-23 ... -1.0038116e-23\n",
+      " -1.0055212e-23 -9.8985533e-24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cooling_dir = '/ceph/submit/data/user/z/zimi/analysis/FIRE/m12z_res4200/cooling_output'\n",
+    "dir = Path(cooling_dir)\n",
+    "for file in sorted(dir.glob(f\"cooling_600_ambient.0.hdf5\")):\n",
+    "    with h5py.File(file, 'r') as fh:\n",
+    "        cooling_time_seconds = fh[f'Ambient/time'][()] #* fh[f'{phase}/time'].attrs['to_cgs']     # Cooling times in seconds\n",
+    "        cooling_rate_cgs = fh[f'Ambient/rate'][()] #* fh[f'{phase}/rate'].attrs['to_cgs']    # Cooling rate in erg sec^-1 cm^3\n",
+    "\n",
+    "print(cooling_rate_cgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.6586455e-23 -4.3695652e-24 -2.0304944e-23 ...  3.6138866e-24\n",
+      "  3.5625199e-24  3.5060300e-24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cooling_dir = '/ceph/submit/data/user/z/zimi/analysis/FIRE/m12f_res7100/output'\n",
+    "dir = Path(cooling_dir)\n",
+    "for file in sorted(dir.glob(f\"cooling_600_ambient.0.hdf5\")):\n",
+    "    with h5py.File(file, 'r') as fh:\n",
+    "        cooling_time_seconds = fh[f'Ambient/time'][()] #* fh[f'{phase}/time'].attrs['to_cgs']     # Cooling times in seconds\n",
+    "        cooling_rate_cgs = fh[f'Ambient/rate'][()] #* fh[f'{phase}/rate'].attrs['to_cgs']    # Cooling rate in erg sec^-1 cm^3\n",
+    "\n",
+    "print(cooling_rate_cgs)"
+   ]
   }
  ],
  "metadata": {
