--- a/notebooks/ray_trace.ipynb
+++ b/notebooks/ray_trace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -29,7 +29,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import h5py\n",
-    "import gizmo_analysis as gizmo\n",
+    "import gizmo_analysis as gizmo \n",
     "import halo_analysis as halo\n",
     "import utilities as ut\n",
     "import glob\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_venv",
+   "display_name": "frb-env",
    "language": "python",
    "name": "python3"
   },
@@ -702,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
